--- a/popup/popup.html
+++ b/popup/popup.html
@@ -5,6 +5,8 @@
     <title>Your Progress Popup</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="popup.css" />
+    <script src="/common.js"></script>
+    <script src="/preferences/prefs.js"></script>
     <script src="popup.js"></script>
 </head>
 
@@ -59,6 +61,7 @@
 
         <div class="progressBar">
             <div class="progressBarInner"></div>
+            <div class="notSetTextInner">- Required options not set -</div>
         </div>
 
     </div>
