--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8"/>
 	<link rel="stylesheet" href="preferences.css"/>
+	<script src="/common.js"></script>
 	<script src="prefs.js"></script>
 	<script src="preferences.js"></script>
 </head>
