--- a/popup/popup.html
+++ b/popup/popup.html
@@ -61,16 +61,19 @@
 
         <div class="progressBar">
             <div class="progressBarInner"></div>
-            <div class="notSetTextInner">- Required options not set -</div>
+            <div class="notSetTextInner">
+                <div class="notSetTextImg"></div>
+                &nbsp;Required Data Missing!&emsp;Click the&nbsp;<div class="optionsImg"></div>&nbsp;below.
+            </div>
         </div>
 
     </div>
 
     <div class="footer">
         <div class="seperator"></div>
-        <div id="btnRefresh" class="button"></div>
+        <div id="btnRefresh" class="button" title="Refresh"></div>
         <div class="seperator"></div>
-        <div id="btnPreferences" class="button"></div>
+        <div id="btnPreferences" class="button" title="Options"></div>
     </div>
 </body>
 
