--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -15,6 +15,43 @@
 	<div class="prefSeperator"></div>
 
 	<div class="preference">
+		<label class="preferenceLabel">This Day</label>
+        <div class="preferenceControl">
+			<label for="dayStart" class="controlTitle">Starts at:</label>
+			<select name="dayStart" id="dayStart">
+				<option value="0">0</option>
+				<option value="1">1</option>
+				<option value="2">2</option>
+				<option value="3">3</option>
+				<option value="4">4</option>
+				<option value="5">5</option>
+				<option value="6">6</option>
+				<option value="7">7</option>
+				<option value="8">8</option>
+				<option value="9">9</option>
+				<option value="10">10</option>
+				<option value="11">11</option>
+				<option value="11">12</option>
+			</select>
+			<label for="dayEnd" class="controlTitle">Ends at:</label>
+			<select name="dayEnd" id="dayEnd">
+				<option value="13">13</option>
+				<option value="14">14</option>
+				<option value="16">16</option>
+				<option value="17">17</option>
+				<option value="18">18</option>
+				<option value="19">19</option>
+				<option value="20">20</option>
+				<option value="21">21</option>
+				<option value="22">22</option>
+				<option value="23">23</option>
+				<option value="24">24</option>
+			</select>
+        </div>
+	</div>
+	<div class="prefSeperator"></div>
+
+	<div class="preference">
 		<label class="preferenceLabel">This Life Expectancy&nbsp;<span id="lifeExpectancyInfo" class="helpInfo">?</span></label>
 	</div>
 
@@ -35,15 +72,15 @@
 	<div class="prefSeperator"></div>
 
     <div class="preference subPref">
-            <label class="preferenceLabel">Gender:</label>
-            <div class="preferenceControl">
-				<select name="gender" id="gender">
-					<option value="bothSexes">Any</option>
-					<option value="male">Male</option>
-					<option value="female">Female</option>
-				</select>
-            </div>
-        </div>
+		<label class="preferenceLabel">Gender:</label>
+		<div class="preferenceControl">
+			<select name="gender" id="gender">
+				<option value="bothSexes">Any</option>
+				<option value="male">Male</option>
+				<option value="female">Female</option>
+			</select>
+		</div>
+	</div>
     <div class="prefSeperator"></div>
 
 	<div class="preference">
