--- a/popup/popup.html
+++ b/popup/popup.html
@@ -69,6 +69,25 @@
 
     </div>
 
+    <div id="userProgressBar">
+
+        <div class="seperator"></div>
+
+        <div id="pBarUser" class="progressBarContainer">
+
+            <div class="progressBarTexts">
+                <label class="progressBarName">User</label>
+                <label class="progressBarValue">-</label>
+            </div>
+
+            <div class="progressBar">
+                <div class="progressBarInner"></div>
+            </div>
+
+        </div>
+
+    </div>
+
     <div class="footer">
         <div class="seperator"></div>
         <div id="btnRefresh" class="button" title="Refresh"></div>
