--- a/popup/popup.html
+++ b/popup/popup.html
@@ -69,7 +69,7 @@
 
     </div>
 
-    <div id="userProgressBar">
+    <div id="userProgressBarContainer">
 
         <div class="seperator"></div>
 
@@ -82,6 +82,10 @@
 
             <div class="progressBar">
                 <div class="progressBarInner"></div>
+                <div class="notSetTextInner">
+                    <div class="notSetTextImg"></div>
+                    &nbsp;Required Data Missing!&emsp;Click the&nbsp;<div class="optionsImg"></div>&nbsp;below.
+                </div>
             </div>
 
         </div>
@@ -89,6 +93,7 @@
     </div>
 
     <div class="footer">
+        <div id="version">xxx</div>
         <div class="seperator"></div>
         <div id="btnRefresh" class="button" title="Refresh"></div>
         <div class="seperator"></div>
