--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -15,7 +15,7 @@
 	<div class="prefSeperator"></div>
 
 	<div class="preference">
-		<label class="preferenceLabel">This Day</label>
+		<label class="preferenceLabel">Your Day</label>
         <div class="preferenceControl">
 			<label for="dayStart" class="controlTitle">Starts at:</label>
 			<select name="dayStart" id="dayStart"></select>
@@ -26,7 +26,7 @@
 	<div class="prefSeperator"></div>
 
 	<div class="preference">
-		<label class="preferenceLabel">This Life Expectancy&nbsp;<span id="lifeExpectancyInfo" class="helpInfo">?</span></label>
+		<label class="preferenceLabel">Your Life Expectancy&nbsp;<span id="lifeExpectancyInfo" class="helpInfo">?</span></label>
 	</div>
 
     <div class="preference subPref">
@@ -59,7 +59,7 @@
     <div class="prefSeperator"></div>
 
 	<div class="preference">
-		<label class="preferenceLabel">Your Process</label>
+		<label class="preferenceLabel">Your Custom Time</label>
         <div class="preferenceControl">
             <input type="checkbox" id="userProgressBar"/>
         </div>
