--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -68,7 +68,7 @@
     <div class="preference subPref">
         <label class="preferenceLabel">Title:</label>
         <div class="preferenceControl">
-            <input type="text" id="userTitle"/>
+            <input type="text" id="userTitle" maxlength="64"/>
         </div>
 	</div>
 	<div class="prefSeperator"></div>
