--- a/popup/popup.html
+++ b/popup/popup.html
@@ -20,6 +20,7 @@
 
         <div class="progressBarTexts">
             <label class="progressBarName">Your Day</label>
+            <div class="checkMarkImg"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -33,6 +34,7 @@
 
         <div class="progressBarTexts">
             <label class="progressBarName">Your Month</label>
+            <div class="checkMarkImg"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -46,6 +48,7 @@
 
         <div class="progressBarTexts">
             <label class="progressBarName">Your Year</label>
+            <div class="checkMarkImg"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -59,6 +62,7 @@
 
         <div class="progressBarTexts">
             <label class="progressBarName">Your Life</label>
+            <div class="checkMarkImg"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -80,6 +84,7 @@
 
             <div class="progressBarTexts">
                 <label class="progressBarName">User</label>
+                <div class="checkMarkImg"></div>
                 <label class="progressBarValue">-</label>
             </div>
 
