--- a/popup/popup.html
+++ b/popup/popup.html
@@ -18,9 +18,11 @@
 
     <div id="pBarDay" class="progressBarContainer">
 
-        <div class="progressBarTexts">
-            <label class="progressBarName">Your Day</label>
+        <div class="progressBarLine">
+            <label class="progressBarTitle">Your Day</label>
             <div class="checkMarkImg"></div>
+            <div class="spacer"></div>
+            <div class="btnProgressPreference"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -32,9 +34,10 @@
 
     <div id="pBarMonth" class="progressBarContainer">
 
-        <div class="progressBarTexts">
-            <label class="progressBarName">Your Month</label>
+        <div class="progressBarLine">
+            <label class="progressBarTitle">Your Month</label>
             <div class="checkMarkImg"></div>
+            <div class="spacer"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -46,9 +49,10 @@
 
     <div id="pBarYear" class="progressBarContainer">
 
-        <div class="progressBarTexts">
-            <label class="progressBarName">Your Year</label>
+        <div class="progressBarLine">
+            <label class="progressBarTitle">Your Year</label>
             <div class="checkMarkImg"></div>
+            <div class="spacer"></div>
             <label class="progressBarValue">-</label>
         </div>
 
@@ -60,10 +64,12 @@
 
     <div id="pBarLife" class="progressBarContainer">
 
-        <div class="progressBarTexts">
-            <label class="progressBarName">Your Life</label>
+        <div class="progressBarLine">
+            <label class="progressBarTitle">Your Life</label>
             <div class="checkMarkImg"></div>
-            <label class="progressBarValue">-</label>
+            <div class="spacer"></div>
+            <div class="btnProgressPreference"></div>
+        <label class="progressBarValue">-</label>
         </div>
 
         <div class="progressBar">
@@ -82,9 +88,11 @@
 
         <div id="pBarUser" class="progressBarContainer">
 
-            <div class="progressBarTexts">
-                <label class="progressBarName">User</label>
+            <div class="progressBarLine">
+                <label class="progressBarTitle">User</label>
                 <div class="checkMarkImg"></div>
+                <div class="spacer"></div>
+                <div class="btnProgressPreference"></div>
                 <label class="progressBarValue">-</label>
             </div>
 
@@ -101,11 +109,15 @@
     </div>
 
     <div class="footer">
-        <div id="version">xxx</div>
+        <div id="version">v0.0</div>
         <div class="seperator"></div>
-        <div id="btnRefresh" class="button" title="Refresh"></div>
+        <div id="btnRefresh" class="button" title="Refresh">
+            <div class="imgButton"></div>
+        </div>
         <div class="seperator"></div>
-        <div id="btnPreferences" class="button" title="Options"></div>
+        <div id="btnPreferences" class="button" title="Options">
+                <div class="imgButton"></div>
+        </div>
     </div>
 </body>
 
