--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -14,7 +14,7 @@
 	<label class="caption">Options</label>
 	<div class="prefSeperator"></div>
 
-	<div class="preference">
+	<div class="preference day">
 		<label class="preferenceLabel">Your Day</label>
         <div class="preferenceControl">
 			<label for="dayStart" class="controlTitle">Starts at:</label>
@@ -25,11 +25,11 @@
 	</div>
 	<div class="prefSeperator"></div>
 
-	<div class="preference">
+	<div class="preference life">
 		<label class="preferenceLabel">Your Life Expectancy&nbsp;<span id="lifeExpectancyInfo" class="helpInfo">?</span></label>
 	</div>
 
-    <div class="preference subPref">
+    <div class="preference subPref life">
         <label class="preferenceLabel">Geographic location:</label>
         <div class="preferenceControl">
             <select name="geoLocation" id="geoLocation"></select>
@@ -37,7 +37,7 @@
 	</div>
 	<div class="prefSeperator"></div>
 
-    <div class="preference subPref">
+    <div class="preference subPref life">
         <label class="preferenceLabel">Date of birth:&nbsp;<span title="Must be a past date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="dateOfBirth" placeholder="yyyy-mm-dd"/>
@@ -45,7 +45,7 @@
 	</div>
 	<div class="prefSeperator"></div>
 
-    <div class="preference subPref">
+    <div class="preference subPref life">
 		<label class="preferenceLabel">Gender:</label>
 		<div class="preferenceControl">
 			<select name="gender" id="gender">
@@ -58,14 +58,14 @@
 	<div></div>
     <div class="prefSeperator"></div>
 
-	<div class="preference">
+	<div class="preference user">
 		<label class="preferenceLabel">Your Custom Time</label>
         <div class="preferenceControl">
             <input type="checkbox" id="userProgressBar"/>
         </div>
 	</div>
 
-    <div class="preference subPref">
+    <div class="preference subPref user">
         <label class="preferenceLabel">Title:</label>
         <div class="preferenceControl">
             <input type="text" id="userTitle" maxlength="64"/>
@@ -73,7 +73,7 @@
 	</div>
 	<div class="prefSeperator"></div>
 
-    <div class="preference subPref">
+    <div class="preference subPref user">
         <label class="preferenceLabel">Starts at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="userStartDate" placeholder="yyyy-mm-dd"/>
@@ -81,7 +81,7 @@
 	</div>
 	<div class="prefSeperator"></div>
 
-    <div class="preference subPref">
+    <div class="preference subPref user">
         <label class="preferenceLabel">Ends at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="userEndDate" placeholder="yyyy-mm-dd"/>
