--- a/popup/popup.html
+++ b/popup/popup.html
@@ -76,7 +76,7 @@
             <div class="progressBarInner"></div>
             <div class="notSetTextInner">
                 <div class="notSetTextImg"></div>
-                &nbsp;Required Data Missing!&emsp;Click the&nbsp;<div class="optionsImg"></div>&nbsp;below.
+                &nbsp;Required Data Missing!&emsp;Click&nbsp;<div class="optionsImg"></div>&nbsp;to correct.
             </div>
         </div>
 
@@ -100,7 +100,7 @@
                 <div class="progressBarInner"></div>
                 <div class="notSetTextInner">
                     <div class="notSetTextImg"></div>
-                    &nbsp;Required Data Missing!&emsp;Click the&nbsp;<div class="optionsImg"></div>&nbsp;below.
+                    &nbsp;Required Data Missing!&emsp;Click&nbsp;<div class="optionsImg"></div>&nbsp;to correct.
                 </div>
             </div>
 
