Bug fix in preferences

--- a/preferences/preferences.html
+++ b/preferences/preferences.html
@@ -30,7 +30,7 @@
 	</div>
 
     <div class="preference subPref life">
-        <label class="preferenceLabel">Geographic location:</label>
+        <label for="geoLocation" class="preferenceLabel">Geographic location:</label>
         <div class="preferenceControl">
             <select name="geoLocation" id="geoLocation"></select>
         </div>
@@ -38,7 +38,7 @@
 	<div class="prefSeperator"></div>
 
     <div class="preference subPref life">
-        <label class="preferenceLabel">Date of birth:&nbsp;<span title="Must be a past date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
+        <label for="dateOfBirth" class="preferenceLabel">Date of birth:&nbsp;<span title="Must be a past date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="dateOfBirth" placeholder="yyyy-mm-dd"/>
         </div>
@@ -46,7 +46,7 @@
 	<div class="prefSeperator"></div>
 
     <div class="preference subPref life">
-		<label class="preferenceLabel">Gender:</label>
+		<label for="gender" class="preferenceLabel">Gender:</label>
 		<div class="preferenceControl">
 			<select name="gender" id="gender">
 				<option value="bothSexes">Any</option>
@@ -59,14 +59,14 @@
     <div class="prefSeperator"></div>
 
 	<div class="preference user">
-		<label class="preferenceLabel">Your Custom Time</label>
+		<label for="userProgressBar" class="preferenceLabel">Your Custom Time</label>
         <div class="preferenceControl">
             <input type="checkbox" id="userProgressBar"/>
         </div>
 	</div>
 
     <div class="preference subPref user">
-        <label class="preferenceLabel">Title:</label>
+        <label for="userTitle" class="preferenceLabel">Title:</label>
         <div class="preferenceControl">
             <input type="text" id="userTitle" maxlength="64"/>
         </div>
@@ -74,7 +74,7 @@
 	<div class="prefSeperator"></div>
 
     <div class="preference subPref user">
-        <label class="preferenceLabel">Starts at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
+        <label for="userStartDate" class="preferenceLabel">Starts at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="userStartDate" placeholder="yyyy-mm-dd"/>
         </div>
@@ -82,7 +82,7 @@
 	<div class="prefSeperator"></div>
 
     <div class="preference subPref user">
-        <label class="preferenceLabel">Ends at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
+        <label for="userEndDate" class="preferenceLabel">Ends at:&nbsp;<span title="Must be a date in the format of 'yyyy-mm-dd'." class="helpInfo">?</span></label>
         <div class="preferenceControl">
             <input type="text" id="userEndDate" placeholder="yyyy-mm-dd"/>
         </div>
